# lin-alg-lib

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  run.sh
src/: main.cpp
src/matrix/: matrix.cpp  matrix.h  matrix.hpp  test_matrix.cpp  test_matrix.hpp
src/utils/: utility_func.h  utility_func.hpp
